--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portafolio_figma",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://Greimil.github.io/portafolio_personal",
+  "homepage": "https://greimil.github.io/{NombreRepo}",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.5",
